# ATM_Project

./: CMakeLists.txt  README.md  accounts.csv  algorithm.c  algorithm.h  database.h  databases.c  gui.c  log.txt  main.c  main_text.c  unittest.c
